		large files on fast connections.

	mbout:
		Removed a small memory leak.

	mbfido:
		When creating uplink area requests the from aka used is now
		the aka defined in the group.
		Removed several memory leaks again.

	mbfile:
		Added -v commandline switch to supress virus checking for the
		adopt and import commands. Use with great care.

	mbsetup:
		Upgrades the nodes records, the new session password is copied
		from the old combined mail/session password.
		In nodes submenu 14 the session and mail passwords can now be
		edited seperatly. This will change again!
		Archivers, file transfer protocols and virus scanners  found 
		during first configure of this program are automatic installed
		in the setup and enabled. Others are shown there with default
		paths but are disabled, they can be used as examples.
		Fixed crashing mbsetup in menus 10.3.2, 10.4.5 and 10.4.6.
		Menu 1.1 system aka's now has the option to move aka's to 
		other positions. Added some check's on the main aka's.

	mbtask:
		The pinger now uses a fixed sequence number to check if this 
		is the problem that sometimes the internet seems down.


v0.33.21	04-Jun-2002

		This is the final release of the 0.33.20 development version.


v0.33.20        10-Feb-2002 - 04-Jun-2002

	upgrade:
		Remove /opt/mbse/etc/safe.data
		Compile sources and install binaries. Restart the BBS.
		Enter mbsetup, this will upgrade the databases.
		Go into global configuration, exit and save, this will update
		the main configuration (add default macro path).
		Edit the message groups and file groups for new settings.
		Run mbfile check to fix download directory permissions.
		Check the setting in menu 10.2.13 if it does what you want it
		to do.

	general:
		Added structures for area maintenance with area lists.
		Installing the maptabs don't give any errors anymore when
		installed as user mbse. The location of the source isn't
		important anymore to install the maptabs.
		Updated German, Spanish and Galego languages.