@@ -47,6 +47,12 @@ v0.35.01	05-Jun-2002
 		Added -v commandline switch to supress virus checking for the
 		adopt and import commands. Use with great care.
 
+	mbsebbs:
+		Bluewave reply packets now also process an incoming *.olc file
+		so now bluewave if fully Bluewave V3 compatible. Internally it
+		works by converting the *.olc file to a *.pdq file. Patch made
+		by Redy Rodriguez.
+
 	mbsetup:
 		Upgrades the nodes records, the new session password is copied
 		from the old combined mail/session password.
